[project]
name = "m4b-creator"
version = "1.0.7"
description = "Create M4B audiobook files from audio chapters using ffmpeg"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
keywords = ["audiobook", "m4b", "audio", "ffmpeg"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "mutagen>=1.47.0",
    "Pillow>=9.0.0",
]

[project.scripts]
m4b = "m4b_creator:main"
m4b-gui = "m4b_gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

# Note: ffmpeg must be installed separately:
# - macOS: brew install ffmpeg
# - Ubuntu/Debian: sudo apt-get install ffmpeg
# - Windows: download from https://ffmpeg.org/download.html
